# kopernicus

./: .env.backup  .gitignore  README.md  asterdex-aster-connector-python-8a5edab282632443.txt  env.example  main.py  pyproject.toml  test_mvp.py
kopernicus/config/: settings.py
kopernicus/database/: db.py  models.py
kopernicus/exchange/: aster_client.py
kopernicus/exchange/aster/: api.py  error.py
kopernicus/exchange/aster/rest_api/: __init__.py  account.py  market.py
kopernicus/strategy/: delta_neutral.py  risk_manager.py
octopus/config/: settings.py
octopus/database/: db.py
octopus/exchange/: aster_client.py
octopus/strategy/: delta_neutral.py  risk_manager.py
